force-app/main/default/objects/Contact/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <defaultValue>true</defaultValue>
    <label>クーポン受け取り希望</label>
    <type>Checkbox</type>
</CustomField>