force-app/main/default/objects/Contact/fields/DMFaxConsent__c.field-meta.xml
<CustomField>
    <fullName>DMFaxConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMやFAXでのご案内（架電可否）</label>
    <type>Checkbox</type>
</CustomField>