force-app/main/default/objects/Contact/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>顧客獲得したきっかけとなったイベント</description>
    <label>ソースイベント</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>取引先責任者</relationshipLabel>
    <relationshipName>event2</relationshipName>
    <type>Lookup</type>
</CustomField>