force-app/main/default/objects/Contact/fields/EventParticipation__c.field-meta.xml
<CustomField>
    <fullName>EventParticipation__c</fullName>
    <label>イベント参加可否</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>×</fullName>
            </value>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>送付なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>