force-app/main/default/objects/Contact/fields/IsDecisionMaker__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionMaker__c</fullName>
    <label>意思決定権の有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>