force-app/main/default/objects/Contact/fields/Labels__c.field-meta.xml
<CustomField>
    <fullName>Labels__c</fullName>
    <label>ラベル</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undefined</fullName>
                <default>true</default>
                <label>未設定</label>
            </value>
            <value>
                <fullName>お客様</fullName>
            </value>
            <value>
                <fullName>アツアツのリード</fullName>
            </value>
            <value>
                <fullName>温かいリード</fullName>
            </value>
            <value>
                <fullName>冷えたリード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>