force-app/main/default/objects/Contact/fields/MarketingStatus__c.field-meta.xml
<CustomField>
    <fullName>MarketingStatus__c</fullName>
    <label>マーケティングステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>許可なし</fullName>
            </value>
            <value>
                <fullName>加入済み</fullName>
            </value>
            <value>
                <fullName>アーカイブ済み</fullName>
            </value>
            <value>
                <fullName>解除済み</fullName>
            </value>
            <value>
                <fullName>バウンス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>