force-app/main/default/objects/Contact/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>取引先責任者の製品</relationshipLabel>
    <relationshipName>ContactProducts</relationshipName>
    <type>Lookup</type>
</CustomField>