force-app/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>ソース</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ニュースレター</fullName>
            </value>
            <value>
                <fullName>リファラル</fullName>
            </value>
            <value>
                <fullName>ウェブサイト</fullName>
            </value>
            <value>
                <fullName>イベント/会議</fullName>
            </value>
            <value>
                <fullName>ソーシャルメディア</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>