force-app/main/default/objects/Contact/fields/StripeAccountId__c.field-meta.xml
<CustomField>
    <fullName>StripeAccountId__c</fullName>
    <label>Stripe アカウント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>