force-app/main/default/objects/Contact/fields/TelemarketingTarget__c.field-meta.xml
<CustomField>
    <fullName>TelemarketingTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>テレアポ対象</label>
    <type>Checkbox</type>
</CustomField>