force-app/main/default/objects/Contact/validationRules/CheckPostalCode.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPostalCode</fullName>
    <active>false</active>
    <errorConditionFormula>MailingPostalCode &lt;&gt; Account.BillingPostalCode</errorConditionFormula>
    <errorMessage>取引先責任者の住所が取引先の住所と一致していません</errorMessage>
</ValidationRule>